manifests/workloads/argo-workloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: argo
  name: argo
