manifests/workloads/argo-workloads/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - "--auth-mode"
            - server
