manifests/workloads/argo-workloads/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-workflows-public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argo.zelesny.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app: argo-server
spec:
  type: ExternalName
  externalName: kube.zelesny.com
  sessionAffinity: None
