manifests/workloads/argo-workloads/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: csp-default-src-self
spec:
  headers:
    contentSecurityPolicy: "default-src * 'unsafe-inline' 'unsafe-eval';"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.zelesny.com`)
      kind: Rule
      services:
        - name: argo-server
          port: 2746
      middlewares:
        - name: csp-default-src-self
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.zelesny.com`)
      kind: Rule
      services:
        - name: argo-server
          port: 2746
          scheme: https
          serversTransport: skip-insecure
      middlewares:
        - name: csp-default-src-self
  tls:
    secretName: argo-cert
